--- a/src/app/sass/components/_blogs.scss
+++ b/src/app/sass/components/_blogs.scss
@@ -12,25 +12,19 @@
     justify-content: center;
     align-items: center;
   }
-
   &__chars {
-    font-size: $font-size-8;
-    border-radius: 2rem;
+    padding: 0.5rem 2rem;
     background-color: $clr--primary;
     color: $clr--secondary;
     box-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
   }
-
+  
   &__nmb {
     display: flex;
     width: 30%;
-    justify-content: space-around;
+    gap: 2rem;
+    justify-content: center;
     align-items: center;
-    h5 {
-      display: flex;
-      justify-content: center;
-      width: 50%;
-    }
   }
 
   &__box {
@@ -61,8 +55,8 @@
 
   &__highlight {
     display: flex;
-    justify-content: space-between; 
-    gap:2rem;
+    justify-content: space-between;
+    gap: 2rem;
   }
   &__highlight--hidden {
     display: none;
@@ -102,7 +96,6 @@
       width: 33.333333%;
     }
   }
-
   &__img {
     width: 100%;
     img {
@@ -121,11 +114,8 @@
 @media only screen and (max-width: 992px) {
   .blogs {
     justify-content: center;
-    &__pagination {
-      flex-direction: column;
-    }
+
     &__nmb {
-      flex-direction: column;
       gap: 3rem;
     }
     &__highlight {
@@ -163,6 +153,17 @@
         height: 100%;
         object-fit: cover;
       }
+    }
+  }
+}
+@media only screen and (max-width: 400px) {
+  .blogs {
+    &__nmb {
+      flex-direction: column;
+      width: 50%;
+    }
+    &__pagination {
+      flex-direction: column;
     }
   }
 }
