--- a/src/app/sass/pages/error.scss
+++ b/src/app/sass/pages/error.scss
@@ -1,11 +1,11 @@
 .error {
   display: flex;
   padding: 4rem 0rem;
-  gap: 2rem;
+  gap: 4rem;
   margin: 6rem 0rem;
   flex-direction: row-reverse;
   &__img {
-    max-width: 100%;
+    width: 100%;
   }
   &__text {
     h1 {
