--- a/src/app/sass/components/_credentials.scss
+++ b/src/app/sass/components/_credentials.scss
@@ -13,7 +13,7 @@
 
     &:hover {
       box-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
-      transform: scale(1.1);
+      transform: scale(1.015);;
     }
 
     display: flex;
@@ -39,6 +39,10 @@
   .credentials {
     &__box {
       justify-content: center;
+    }
+    &__rounded {
+      height: 10rem;
+      width: 10rem;
     }
   }
 }
