--- a/src/app/sass/partials/_variables.scss
+++ b/src/app/sass/partials/_variables.scss
@@ -1,10 +1,11 @@
 // Font Colors:
 
 $clr--primary: #ff9549;
-$clr--primary-dark: #EF9151;
+$clr--primary-dark: #ef9151;
 $clr--secondary: #ffffff;
 $clr--secondary-dark: #1c1c1c;
 $clr--secondary-x-dark: #000000;
+$clr--slate: #ebebeb;
 // Font Families
 
 $font--primary: "Inter";
