--- a/src/app/sass/components/_articlescard.scss
+++ b/src/app/sass/components/_articlescard.scss
@@ -11,7 +11,7 @@
   &:hover {
     box-shadow: 0 25px 50px -12px rgba(255, 149, 73, 1);
     rotate: 2deg;
-    transform: scale(1.1);
+    transform: scale(1.015);;
   }
 
   &__upperSection {
