--- a/src/app/sass/components/_button.scss
+++ b/src/app/sass/components/_button.scss
@@ -4,7 +4,7 @@
     transition: 0.2s;
 
     &:hover {
-      transform: scale(1.1);
+      transform: scale(1.015);;
       cursor: pointer;
     }
   }
@@ -14,7 +14,7 @@
     transition: 0.2s;
 
     &:hover {
-      transform: scale(1.1);
+      transform: scale(1.015);;
       cursor: pointer;
       background-color: $clr--primary-dark;
     }
