--- a/src/app/sass/components/_information.scss
+++ b/src/app/sass/components/_information.scss
@@ -2,16 +2,15 @@
   padding: 4rem 0rem;
   display: flex;
   gap: 4rem;
-
+  justify-content: space-between;
   &__img {
     display: flex;
     justify-content: center;
-    width: 50%;
-    // overflow: auto;
+    width: 100%;
     img {
       height: 100%;
       width: 100%;
-      object-fit: fill;
+      object-fit: contain;
     }
   }
 
@@ -23,20 +22,18 @@
   }
 
   &__minilogo {
-    max-width: 20%;
+    width: 10%;
   }
 
   &__textcontent {
     h3 {
       word-wrap: break-word;
     }
-
     justify-content: center;
-    width: 50%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
-
     ul {
       line-height: 2.5rem;
 
@@ -50,7 +47,7 @@
     }
   }
 
-  &__reverse {
+  &--reverse {
     flex-direction: row-reverse;
   }
 
@@ -68,16 +65,26 @@
     }
   }
   @media only screen and (max-width: 992px) {
+    &__minilogo {
+      width: 10%;
+    }
     flex-direction: column-reverse;
 
     &__img {
       img {
-        max-height: 100%;
         max-width: 100%;
       }
     }
   }
   @media only screen and (max-width: 576px) {
+    &__minilogo {
+      width: 25%;
+    }
+    &__textcontent {
+      p {
+        padding-right: 0rem;
+      }
+    }
     &__btn {
       button {
         width: 100%;
