--- a/src/app/sass/components/_footer.scss
+++ b/src/app/sass/components/_footer.scss
@@ -45,10 +45,10 @@
       flex-direction: column;
       gap: 0.5rem;
       a {
+        width: fit-content;
         cursor: default;
       }
       li {
-        display: inline-block;
         line-height: 2rem;
         transition: 0.2s;
         cursor: pointer;
